database/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: skuggsnack
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: auth-service
