database/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: skuggsnack
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: chat-service
