database/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: skuggsnack
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
