database/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: skuggsnack

spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
